--- a/PJ/templates/auth/signup.html
+++ b/PJ/templates/auth/signup.html
@@ -9,7 +9,7 @@
         <div class="row">
             <form class="col s12" method="post" action="{{ reverse_url('signup') }}">
                 {% module xsrf_form_html() %}
-                <h4>Chatty へ登録</h4>
+                <h4>Nyat へ登録</h4>
                 {% for field in form %}
                     <div class="row">
                         <div class="input-field col s12">
