--- a/PJ/templates/auth/login.html
+++ b/PJ/templates/auth/login.html
@@ -9,7 +9,7 @@
         <div class="row">
             <form class="col s12" method="post" action="{{ reverse_url('login') }}">
                 {% module xsrf_form_html() %}
-                <h4>Chatty へログイン</h4>
+                <h4>Nyat へログイン</h4>
                 <div class="row">
                     <div class="input-field col s12">
                         <input id="email" type="email" name="email" class="validate">
