--- a/PJ/templates/base.html
+++ b/PJ/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-    <title>Chatty</title>
+    <title>NyaChat</title>
 
     <!-- CSS  -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -24,12 +24,11 @@
 
 <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-        <a id="logo-container" href="{{ reverse_url('index') }}" class="brand-logo">Chatty</a>
+        <a id="logo-container" href="{{ reverse_url('index') }}" class="brand-logo">Nyat</a>
 
         <ul class="right hide-on-med-and-down">
             {% if current_user %}
             {% block search_bar %}{% end %}
-            <li><a href="{{ reverse_url('groups') }}">Groups</a></li>
             <li><a href="{{ reverse_url('users') }}">Users</a></li>
             <!-- Dropdown Trigger -->
             <li><a class="dropdown-button" href="#!" data-activates="dropdown1">{{ current_user['name'] }}<i class="material-icons right">arrow_drop_down</i></a></li>
@@ -39,7 +38,6 @@
         </ul>
         <ul id="nav-mobile" class="side-nav">
             {% if current_user %}
-            <li><a href="{{ reverse_url('groups') }}">Groups</a></li>
             <li><a href="{{ reverse_url('users') }}">Users</a></li>
             {% else %}
             <li><a href="{{ reverse_url('login') }}">Login</a></li>
@@ -56,22 +54,21 @@
     <div class="container">
         <div class="row">
             <div class="col l6 s12">
-                <h5 class="white-text">Our Team</h5>
-                <p class="grey-text text-lighten-4">We are a team of STC new comers.</p>
+                <h5 class="white-text">Project</h5>
+                <p class="grey-text text-lighten-4">I am a member of EARTH new comers.</p>
             </div>
             <div class="col l3 s12">
                 <h5 class="white-text">Categories</h5>
                 <ul>
                     <li><a class="white-text" href="{{ reverse_url('index') }}">Top</a></li>
-                    <li><a class="white-text" href="{{ reverse_url('groups') }}">Groups</a></li>
                     <li><a class="white-text" href="{{ reverse_url('users') }}">Users</a></li>
                 </ul>
             </div>
             <div class="col l3 s12">
                 <h5 class="white-text">Link</h5>
                 <ul>
-                    <li><a class="white-text" href="#!">.Chain()</a></li>
-                    <li><a class="white-text" href="#!">Zone</a></li>
+                    <li><a class="white-text" href="#!">NEKONEKOchain</a></li>
+                    <li><a class="white-text" href="#!">NEKONEKOzone</a></li>
                 </ul>
             </div>
         </div>
