--- a/PJ/templates/index.html
+++ b/PJ/templates/index.html
@@ -5,13 +5,13 @@
     <div class="section no-pad-bot">
         <div class="container">
             <br><br>
-            <h1 class="header center teal-text text-lighten-2">Chatty</h1>
+            <h1 class="header center teal-text text-lighten-2">Nyat</h1>
             <div class="row center">
                 <h5 class="header col s12 light">匿名で楽しくチャットできるサービス</h5>
             </div>
             {% if not current_user %}
             <div class="row center">
-                <a href="{{ reverse_url('signup') }}" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Sign up</a>
+                <a href="{{ reverse_url('signup') }}" id="download-buttA chat room is a "Nyat" where you can talk anonymously in real online. Would you like to have fun talking to people who love cats like cats ??on" class="btn-large waves-effect waves-light teal lighten-1">Sign up</a>
             </div>
             {% end %}
             <br><br>
@@ -28,27 +28,22 @@
             <div class="col s12 m4">
                 <div class="icon-block">
                     <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-                    <h5 class="center">Speeds up development</h5>
+                    <h5 class="center">Minna Neko Suki</h5>
 
-                    <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+                    <p class="light">A chat room is a "Nyat" where you can talk anonymously in real online. Would you like to have fun talking to people who love cats like cats ??</p>
                 </div>
             </div>
 
-            <div class="col s12 m4">
-                <div class="icon-block">
-                    <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-                    <h5 class="center">User Experience Focused</h5>
-
-                    <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+                    <p class="light">A chat room is a "Nyat" where you can talk anonymously in real online. Would you like to have fun talking to people who love cats like cats ?? A chat room is a "Nyat" where you can talk anonymously in real online. Would you like to have fun talking to people who love cats like cats ??</p>
                 </div>
             </div>
 
             <div class="col s12 m4">
                 <div class="icon-block">
                     <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-                    <h5 class="center">Easy to work with</h5>
+                    <h5 class="center">Let`s work and Let`s laugh</h5>
 
-                    <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+                    <p class="light">Laugh with someone rather than laughing alone. I am clenched my teeth when I am alone.</p>
                 </div>
             </div>
         </div>
